--- a/client/src/pages/Login/Login.module.scss
+++ b/client/src/pages/Login/Login.module.scss
@@ -47,7 +47,8 @@
     }
   }
 
-  button {
+  .login_button,
+  .signup-button {
     width: 100%;
     height: 36px;
     text-align: center;
@@ -56,5 +57,34 @@
     border: none;
     color: #ffffff;
     cursor: pointer;
+
+    &:disabled {
+      background-color: #cccccc;
+    }
+  }
+
+  .auth-utils {
+    margin-top: 18px;
+    display: flex;
+    justify-content: center;
+    .find-pw,
+    .sign-up {
+      font-size: 14px;
+      font-weight: 100;
+      color: #0052cc;
+      cursor: pointer;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    i {
+      padding: 0 6px;
+      font-weight: 700;
+      color: #555;
+      line-height: 20px;
+    }
   }
 }
