--- a/client/src/hoc/Layout/MainGnb.module.scss
+++ b/client/src/hoc/Layout/MainGnb.module.scss
@@ -107,4 +107,20 @@
       height: 20px;
     }
   }
+
+  .circle_btn {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    svg {
+      width: 100%;
+      height: 100%;
+      color: hsla(0, 0%, 100%, 0.5);
+    }
+  }
 }
