--- a/client/src/components/main/boards/boardItem/BoardItem.module.scss
+++ b/client/src/components/main/boards/boardItem/BoardItem.module.scss
@@ -1,8 +1,8 @@
-.personal-item-section {
+.board-item-section {
   display: flex;
   flex-wrap: wrap;
 
-  .personal-item {
+  .board-item {
     position: relative;
     width: 23.5%;
     margin: 0 2% 8px 0;
@@ -10,13 +10,18 @@
     border-radius: 3px;
     overflow: hidden;
 
-    .personal-item-inner {
+    .board-item-inner {
       display: flex;
       height: 96px;
       padding: 8px;
       position: relative;
       flex-direction: column;
       justify-content: space-between;
+
+      &.create {
+        justify-content: center;
+        align-items: center;
+      }
 
       .item-title {
         color: #ffffff;
@@ -25,19 +30,25 @@
         position: relative;
         text-decoration: none;
       }
+
+      .create-item-title {
+        font-size: 14px;
+        color: #506486;
+      }
     }
 
-    &.bg-green {
-      background-color: rgb(75, 191, 107);
-    }
-    &.bg-yellow {
-      background-color: rgb(210, 144, 52);
-    }
-    &.bg-blue {
-      background-color: rgb(0, 121, 191);
+    .create-hover-action {
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transition: all 0.2s;
+      background-color: rgba(159, 178, 194, 0.1);
     }
 
-    .hover-action {
+    .board-hover-action {
       width: 100%;
       height: 100%;
       opacity: 0;
@@ -57,7 +68,10 @@
     }
 
     &:hover {
-      .hover-action {
+      .create-hover-action {
+        opacity: 1;
+      }
+      .board-hover-action {
         opacity: 1;
 
         svg {
