--- a/client/src/components/popover/user/userPop.module.scss
+++ b/client/src/components/popover/user/userPop.module.scss
@@ -1,19 +1,18 @@
-.custom-gnb-modal {
-  position: relative;
+.user-modal {
+  position: absolute;
+  top: 40px;
+  right: 0;
   z-index: 10;
 
-  .gnb-modal-content {
-    position: absolute;
-    top: 40px;
-    right: 0;
+  .user-modal-content {
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
 
-    .gnb-modal-inner {
+    .user-modal-inner {
       width: 300px;
 
-      .gnb-modal-title {
+      .user-modal-title {
         margin: 0 12px 8px;
         color: #5e6c84;
         font-size: 14px;
