--- a/client/src/hoc/layout/Gnb.module.scss
+++ b/client/src/hoc/layout/Gnb.module.scss
@@ -53,12 +53,10 @@
         padding-left: 8px;
         background-color: hsla(0, 0%, 100%, 0.3);
         border-radius: 5px;
-        border: none;
         transition: all 0.1s;
 
         &:focus {
           width: 280px;
-          outline: none;
           background-color: #ffffff;
           padding-right: 54px;
         }
@@ -111,16 +109,17 @@
   .circle_btn {
     width: 32px;
     height: 32px;
+    position: relative;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
 
     svg {
       width: 100%;
       height: 100%;
       color: hsla(0, 0%, 100%, 0.5);
+      cursor: pointer;
     }
   }
 }
