--- a/client/src/components/modal/createBoard/Dialog_create_board.module.scss
+++ b/client/src/components/modal/createBoard/Dialog_create_board.module.scss
@@ -83,6 +83,10 @@
         color: #a5adba;
         background-color: #f4f5f7;
       }
+
+      &:active {
+        background-color: #49852e;
+      }
     }
   }
 }
