--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,3 +50,20 @@ button {
 .bg-gray {
   background-color: rgba(9, 30, 66, 0.04);
 }
+
+.bg-forest {
+  background: center / cover no-repeat
+    url("https://images.unsplash.com/photo-1500762728065-466b7a170c96?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+}
+.bg-sandcave {
+  background: center / cover no-repeat
+    url("https://images.unsplash.com/photo-1444076784383-69ff7bae1b0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+}
+.bg-bird {
+  background: center / cover no-repeat
+    url("https://images.unsplash.com/photo-1578279043004-e218349bfdfd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+}
+.bg-mountain {
+  background: center / cover no-repeat
+    url("https://images.unsplash.com/photo-1493246507139-91e8fad9978e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+}
