--- a/client/src/components/popover/user/userPop.module.scss
+++ b/client/src/components/popover/user/userPop.module.scss
@@ -1,18 +1,18 @@
-.user-modal {
+.user-dialog {
   position: absolute;
   top: 40px;
   right: 0;
   z-index: 10;
 
-  .user-modal-content {
+  .user-dialog-content {
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
 
-    .user-modal-inner {
+    .user-dialog-inner {
       width: 300px;
 
-      .user-modal-title {
+      .user-dialog-title {
         margin: 0 12px 8px;
         color: #5e6c84;
         font-size: 14px;
