--- a/client/src/shared/spinner/Spinner.module.scss
+++ b/client/src/shared/spinner/Spinner.module.scss
@@ -9,6 +9,9 @@
   height: 16px;
   text-align: center;
   font-size: 10px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .spinner > div {
