--- a/client/src/components/dialog/createBoard/Dialog_create_board.module.scss
+++ b/client/src/components/dialog/createBoard/Dialog_create_board.module.scss
@@ -72,6 +72,7 @@
 
     button {
       width: 104px;
+      height: 32px;
       font-size: 12px;
       color: #ffffff;
       background-color: #5aac44;
