--- a/client/src/components/main/boards/boardItem/BoardItem.scss
+++ b/client/src/components/main/boards/boardItem/BoardItem.scss
@@ -31,6 +31,7 @@
         position: relative;
         z-index: 5;
         text-decoration: none;
+        word-break: break-all;
       }
 
       .create-item-title {
