--- a/client/src/components/main/boards/Boards.scss
+++ b/client/src/components/main/boards/Boards.scss
@@ -1,14 +1,14 @@
-.board-wrap {
+.board_wrap {
   margin-top: 40px;
   width: 860px;
 
-  .board-inner-area {
+  .board_inner_area {
     padding-left: 64px;
 
-    .board-section {
+    .board_section {
       padding: 0 0 20px;
 
-      .board-title {
+      .board_title {
         display: flex;
         align-items: center;
         margin-bottom: 11px;
