--- a/client/src/components/main/template/template.scss
+++ b/client/src/components/main/template/template.scss
@@ -1,8 +1,8 @@
-.template-wrap {
+.template_wrap {
   margin-top: 40px;
   width: 860px;
 
-  .template-inner-area {
+  .template_inner_area {
     padding-left: 64px;
   }
 }
