--- a/client/src/hoc/layout/SideBar.scss
+++ b/client/src/hoc/layout/SideBar.scss
@@ -1,5 +1,7 @@
-.side_bar_layout {
+.main_screen {
+  padding-top: 40px;
   display: flex;
+  flex: 1;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
