--- a/client/src/pages/signup/Signup.scss
+++ b/client/src/pages/signup/Signup.scss
@@ -61,12 +61,12 @@
     }
   }
 
-  .auth-utils {
+  .auth_utils {
     margin-top: 18px;
     display: flex;
     justify-content: center;
-    .find-pw,
-    .sign-up {
+    .find_pw,
+    .sign_up {
       font-size: 14px;
       font-weight: 100;
       color: #0052cc;
