--- a/client/src/hoc/layout/Gnb.scss
+++ b/client/src/hoc/layout/Gnb.scss
@@ -2,11 +2,14 @@
   width: 100%;
   height: 40px;
   padding: 4px;
-  position: relative;
+  position: fixed;
   display: flex;
+  top: 0;
+  left: 0;
   justify-content: space-between;
-  background-color: #026aa7;
 
+
+  // background: rgba(0,0,0,.15);
   .logo {
     position: absolute;
     top: 50%;
