카드 add 리스트 추가

--- a/client/src/hoc/layout/Gnb.scss
+++ b/client/src/hoc/layout/Gnb.scss
@@ -3,11 +3,11 @@
   height: 40px;
   padding: 4px;
   position: fixed;
+  z-index: 10;
   display: flex;
   top: 0;
   left: 0;
   justify-content: space-between;
-
 
   // background: rgba(0,0,0,.15);
   .logo {
