Trello List 생성 및 조회

--- a/client/src/components/main/boards/Boards.scss
+++ b/client/src/components/main/boards/Boards.scss
@@ -23,6 +23,11 @@
           font-weight: 700;
         }
       }
+
+      .board_item_section {
+        display: flex;
+        flex-wrap: wrap;
+      }
     }
   }
 }
