--- a/client/src/components/trello/TrelloList.scss
+++ b/client/src/components/trello/TrelloList.scss
@@ -1,7 +1,7 @@
 .trello_list_wrapper {
   width: 272px;
   margin: 0 4px;
-  height: 100%;
+  height: calc(100% - 8px);
   box-sizing: border-box;
   display: inline-block;
   vertical-align: top;
@@ -10,26 +10,25 @@
   padding-bottom: 8px;
 
   .trello_list_content {
-    background-color: #ebecf0;
-    border-radius: 3px;
-    box-sizing: border-box;
+    position: relative;
     display: flex;
     flex-direction: column;
+    border-radius: 3px;
     max-height: 100%;
-    position: relative;
     white-space: normal;
+    background-color: #ebecf0;
 
     .trello_list_header {
-      flex: 0 0 auto;
-      padding: 10px 8px;
       position: relative;
-      min-height: 40px;
-
+      padding: 6px 8px;
       textarea {
-        width: 196px;
+        color: #172b4d;
+        width: 212px;
         height: 20px;
-        min-height: 20px;
+        line-height: 20px;
+        min-height: 12px;
         max-height: 256px;
+        display: block;
         padding: 4px 8px;
         font-size: 14px;
         font-weight: 600;
@@ -37,9 +36,52 @@
         overflow: hidden;
         overflow-wrap: break-word;
         background: transparent;
+        cursor: pointer;
 
         &:focus {
           box-shadow: inset 0 0 0 2px #0079bf;
+          background-color: #fff;
+        }
+      }
+
+      .trello_list_more {
+        position: absolute;
+        right: 4px;
+        top: 4px;
+        width: 32px;
+        height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 3px;
+        cursor: pointer;
+
+        svg {
+          color: #6b778c;
+        }
+
+        &:hover {
+          background-color: rgba(9, 30, 66, 0.08);
+
+          svg {
+            color: #42526e;
+          }
+        }
+      }
+    }
+
+    .trello_list_composer {
+      position: relative;
+      padding: 6px 8px;
+      margin-bottom: 9px;
+
+      .trello_list_add_card {
+        display: flex;
+        font-size: 14px;
+        color: #5e6c84;
+        svg {
+          width: 20px;
+          height: 20px;
         }
       }
     }
