--- a/client/src/hoc/layout/Gnb.scss
+++ b/client/src/hoc/layout/Gnb.scss
@@ -1,7 +1,6 @@
 @mixin common_button {
   margin-right: 5px;
   color: #ffffff;
-  padding: 4px;
   display: flex;
   align-items: center;
   border-radius: 5px;
@@ -15,8 +14,8 @@
 }
 
 .gnb_wrap {
-  width: 100%;
-  height: 40px;
+  width: calc(100% - 8px);
+  height: 32px;
   padding: 4px;
   position: fixed;
   z-index: 10;
@@ -25,13 +24,12 @@
   left: 0;
   justify-content: space-between;
 
-  // background: rgba(0,0,0,.15);
   .logo {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url("https://a.trellocdn.com/prgb/dist/images/header-logo-2x.01ef898811a879595cea.png");
+    background-image: url('https://a.trellocdn.com/prgb/dist/images/header-logo-2x.01ef898811a879595cea.png');
     background-position: 100% 0;
     background-repeat: no-repeat;
     background-size: 80px 30px;
