--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   list-style-type: none;
 }
 
@@ -17,6 +16,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+  color: #333;
 }
 
 form {
