--- a/client/src/components/popover/user/UserPopover.scss
+++ b/client/src/components/popover/user/UserPopover.scss
@@ -39,7 +39,7 @@
 
           &.line_break::after {
             background-color: rgba(9, 30, 66, 0.13);
-            content: " ";
+            content: ' ';
             display: block;
             height: 1px;
             margin: 8px auto;
