--- a/client/src/components/trello/TrelloList.scss
+++ b/client/src/components/trello/TrelloList.scss
@@ -1,5 +1,5 @@
 .trello_list_wrapper {
-  width: 272px;
+  min-width: 272px;
   margin: 0 4px;
   height: calc(100% - 8px);
   box-sizing: border-box;
@@ -8,82 +8,4 @@
   white-space: nowrap;
   margin-bottom: 8px;
   padding-bottom: 8px;
-
-  .trello_list_content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    border-radius: 3px;
-    max-height: 100%;
-    white-space: normal;
-    background-color: #ebecf0;
-
-    .trello_list_header {
-      position: relative;
-      padding: 6px 8px;
-      textarea {
-        color: #172b4d;
-        width: 212px;
-        height: 20px;
-        line-height: 20px;
-        min-height: 12px;
-        max-height: 256px;
-        display: block;
-        padding: 4px 8px;
-        font-size: 14px;
-        font-weight: 600;
-        resize: none;
-        overflow: hidden;
-        overflow-wrap: break-word;
-        background: transparent;
-        cursor: pointer;
-
-        &:focus {
-          box-shadow: inset 0 0 0 2px #0079bf;
-          background-color: #fff;
-        }
-      }
-
-      .trello_list_more {
-        position: absolute;
-        right: 4px;
-        top: 4px;
-        width: 32px;
-        height: 32px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 3px;
-        cursor: pointer;
-
-        svg {
-          color: #6b778c;
-        }
-
-        &:hover {
-          background-color: rgba(9, 30, 66, 0.08);
-
-          svg {
-            color: #42526e;
-          }
-        }
-      }
-    }
-
-    .trello_list_composer {
-      position: relative;
-      padding: 6px 8px;
-      margin-bottom: 9px;
-
-      .trello_list_add_card {
-        display: flex;
-        font-size: 14px;
-        color: #5e6c84;
-        svg {
-          width: 20px;
-          height: 20px;
-        }
-      }
-    }
-  }
 }
