--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,9 @@ textarea {
   border: none;
   outline: none;
   border-radius: 3px;
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 button {
