--- a/client/src/hoc/layout/gnb/Gnb.scss
+++ b/client/src/hoc/layout/gnb/Gnb.scss
@@ -24,26 +24,6 @@
   left: 0;
   justify-content: space-between;
 
-  .logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-image: url('https://a.trellocdn.com/prgb/dist/images/header-logo-2x.01ef898811a879595cea.png');
-    background-position: 100% 0;
-    background-repeat: no-repeat;
-    background-size: 80px 30px;
-    cursor: pointer;
-    display: inline-block;
-    height: 30px;
-    width: 80px;
-    opacity: 0.6;
-
-    &:hover {
-      opacity: 0.8;
-    }
-  }
-
   .gnb_left {
     display: flex;
 
@@ -53,6 +33,8 @@
       font-weight: 700;
       font-size: 14px;
       justify-content: space-around;
+      padding: 0 6px;
+      box-sizing: border-box;
 
       svg {
         width: 20px;
