--- a/client/src/components/popover/trello/TrelloPopover.scss
+++ b/client/src/components/popover/trello/TrelloPopover.scss
@@ -25,18 +25,6 @@
         padding-bottom: 12px;
 
         li {
-          > div {
-            color: #172b4d;
-            font-size: 14px;
-            line-height: 20px;
-            padding: 6px 12px;
-            cursor: pointer;
-          }
-
-          > div:hover {
-            background-color: rgba(9, 30, 66, 0.04);
-          }
-
           &.line_break::after {
             background-color: rgba(9, 30, 66, 0.13);
             content: ' ';
@@ -44,6 +32,34 @@
             height: 1px;
             margin: 8px auto;
             width: calc(100% - 20px);
+          }
+
+          .actions_title {
+            position: relative;
+            overflow: hidden;
+            color: #172b4d;
+            font-size: 14px;
+            line-height: 20px;
+            padding: 6px 12px;
+            cursor: pointer;
+          }
+
+          > .actions_title:hover {
+            background-color: rgba(9, 30, 66, 0.04);
+          }
+
+          button {
+            position: absolute;
+            top: 0;
+            right: 10px;
+            width: 100px;
+            height: 32px;
+            font-size: 12px;
+            color: #ffffff;
+            background-color: #cd3232;
+            text-align: center;
+            line-height: 32px;
+            border-radius: 3px;
           }
         }
       }
