--- a/client/src/pages/trello/Trello.scss
+++ b/client/src/pages/trello/Trello.scss
@@ -79,7 +79,7 @@
   .trello_content {
     display: flex;
     flex: 1;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-bottom: 8px;
 
     .trello_items {
